fix: text alignment fix for form elements (#538)
* fix: text alignment fix for form elements

* fix: text align right fix for form elements

* fix: less specific text alignment fix

--- a/scss/components/_Forms.scss
+++ b/scss/components/_Forms.scss
@@ -26,8 +26,8 @@ $label-font-size: $font-size-base !default;
   max-width: 100%;
   outline: none;
   padding: $padding-small;
+  text-align: left;
   width: 100%;
-
   &:active,
   &:focus {
     background-color: $input-bkgd-focus;
@@ -52,7 +52,7 @@ $label-font-size: $font-size-base !default;
   display: block;
   font-size: $label-font-size;
   margin: 0 0 $margin-base;
-
+  text-align: left;
   .rev-Button,
   .rev-Input,
   .rev-Select,
